--- a/JobOfferService/Properties/launchSettings.json
+++ b/JobOfferService/Properties/launchSettings.json
@@ -16,7 +16,8 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7206;http://localhost:5100",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "RabbitConnectionUri": "amqp://guest:guest@localhost:5672"
       }
     },
     "IIS Express": {
