--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+launchSettings.json
+/JobOfferService/Properties/launchSettings.json
+/WebScrapper/Properties/launchSettings.json
