--- a/JobOffersMapperService/appsettings.json
+++ b/JobOffersMapperService/appsettings.json
@@ -7,5 +7,8 @@
         "System": "Warning"
       }
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=OffersBase;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
