feat: temporary docker setup to avoid local db problems

--- a/JobOfferService/appsettings.json
+++ b/JobOfferService/appsettings.json
@@ -10,6 +10,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Offers;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.;Database=Offers;Trusted_Connection=True;TrustServerCertificate=True;",
+    "DockerConnection": "Data Source=host.docker.internal, 1433;Initial Catalog=Offers;User ID=docker;Password=LyjeU6x4Cms7EXqknRTcwd;TrustServerCertificate=True"
   }
 }
