feat: added docker support for job offers mapper service and register it in docker compose

--- a/JobOffersMapperService/appsettings.json
+++ b/JobOffersMapperService/appsettings.json
@@ -9,6 +9,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=OffersBase;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.;Database=OffersBase;Trusted_Connection=True;TrustServerCertificate=True;",
+    "DockerConnection": "Data Source=host.docker.internal, 1433;Initial Catalog=OffersBase;User ID=docker;Password=LyjeU6x4Cms7EXqknRTcwd;TrustServerCertificate=True"
   }
 }
