feat: full docker support added

--- a/JobOfferService/appsettings.json
+++ b/JobOfferService/appsettings.json
@@ -11,6 +11,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=Offers;Trusted_Connection=True;TrustServerCertificate=True;",
-    "DockerConnection": "Data Source=host.docker.internal, 1433;Initial Catalog=Offers;User ID=docker;Password=LyjeU6x4Cms7EXqknRTcwd;TrustServerCertificate=True"
+    "DockerConnection": "Server=host.docker.internal,1432;Initial Catalog=Offers;User ID = sa;Password=offersdbpwd123@;TrustServerCertificate=true"
   }
 }
