fix: minior fixes

--- a/JobOfferService/JobOffersService.csproj
+++ b/JobOfferService/JobOffersService.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\JobOffersApiCore\JobOffersApiCore.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<InternalsVisibleTo Include="JobOfferServiceTests"/>
+	</ItemGroup>
+
 </Project>
