--- a/UsersService/appsettings.json
+++ b/UsersService/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=OffersApiUsers;Trusted_Connection=True;TrustServerCertificate=True;"
-  } ,
+    "DefaultConnection": "Server=.;Database=Offers;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Authentication": {
     "TokenUri": "https://identitytoolkit.googleapis.com/v1/accounts:signInWithPassword?key=AIzaSyBsoEs2qyaopc2QhsnA_0o51e0Ityhw_uk"
   }
