--- a/MailSedningService/MailSedningService.csproj
+++ b/MailSedningService/MailSedningService.csproj
@@ -11,6 +11,11 @@
     <PackageReference Include="MailKit" Version="4.3.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\JobOffersApiCore\JobOffersApiCore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
