--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ FodyWeavers.xsd
 launchSettings.json
 /JobOfferService/Properties/launchSettings.json
 /WebScrapper/Properties/launchSettings.json
+/UsersService/firebase.json
