docs: added project description

--- a/JobOfferService/appsettings.json
+++ b/JobOfferService/appsettings.json
@@ -10,7 +10,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Offers;Trusted_Connection=True;TrustServerCertificate=True;",
-    "DockerConnection": "Server=host.docker.internal,1432;Initial Catalog=Offers;User ID = sa;Password=offersdbpwd123@;TrustServerCertificate=true"
+    "DefaultConnection": "Server=.;Database=Offers;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
